<resources>
    <string name="app_name">ExpenseMange</string>
    <string name="notes">Notes</string>
    <string name="summary">Summary</string>
    <string name="calendar">Calendar</string>
    <string name="monthly">monthly</string>
    <string name="daily">Daily</string>
    <string name="cash">Cash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>