<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="clip_horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutConstrainLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/orange"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <ImageView
            android:id="@+id/backIconImagePrivesDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backicon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="May 23 2023"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nextIconImageNextDate"
            app:layout_constraintStart_toEndOf="@id/backIconImagePrivesDate"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nextIconImageNextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/nexticon" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutConstrainLayoutTop"

        app:tabIndicatorColor="#FFFFFF"

        app:tabMode="scrollable"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/daily" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/summary" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/balanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Income" />

            <TextView
                android:id="@+id/expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Expense" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Total" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:id="@+id/income2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="0.0" />

            <TextView
                android:id="@+id/expense2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0.0" />

            <TextView
                android:id="@+id/total2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0.0" />


        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/orange"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottommenu" />




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/plus1"

        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>